--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "engines": {
-    "node": ">=18.18.0"
+    "node": ">=22"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -28,6 +28,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^11.7.0",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
