--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,9 @@
     "start": "server.js",
     "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": ">=22"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.15.2",
     "paypal-rest-sdk": "^1.8.1"
   }
 }
